local/client-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 2
  selector: 
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: eu.gcr.io/surfschool-finder/client:latest
          ports:
            - containerPort: 10230
      imagePullSecrets:
        - name: gcr-json-key
