local/server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-deployment
spec: 
  replicas: 2 
  selector:
    matchLabels:
      component: server
  template:
    metadata:
      labels:
        component: server
    spec:
      containers:
        - name: server
          image: eu.gcr.io/surfschool-finder/server:977337dcb126c45864e0ccf7a459847037107641
          ports:
            - containerPort: 8081
      imagePullSecrets:
        - name: gcr-json-key
