local/leads-cluster-ip-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: leads-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: leads
  ports:
    - port: 9000
      targetPort: 9000
